[package]
name = "guardhaus"
version = "0.0.15"
authors = ["Mark Lee"]
description = "An HTTP authentication/authorization library."
documentation = "https://malept.github.io/guardhaus/"
repository = "https://github.com/malept/guardhaus"
readme = "README.md"
keywords = ["http", "hyper", "authentication", "authorization", "digest"]
license = "MIT"

[dependencies]
crypto-hash = "0.2"
hex = "0.2"
hyper = "0.10"
unicase = "2.0"
url = "1.0"

[dev-dependencies]

getopts = "0.2"
rpassword = "0.4"
