[package]
name = "guardhaus"
version = "0.0.16"
authors = ["Mark Lee"]
description = "An HTTP authentication/authorization library."
documentation = "https://malept.github.io/guardhaus/"
repository = "https://github.com/malept/guardhaus"
readme = "README.md"
keywords = ["http", "hyper", "authentication", "authorization", "digest"]
license = "MIT"
edition = "2024"

[dependencies]
crypto-hash = "0.3"
hex = "0.4.2"
hyper = "0.11"
percent-encoding = "2.1.0"
unicase = "2.0"

[dev-dependencies]

futures = "0.1"
getopts = "0.2"
rpassword = "4.0.5"
