cargo-features = ["edition2024"]

[package]
name = "guardhaus"
version = "0.0.16"
authors = ["Mark Lee"]
description = "An HTTP authentication/authorization library."
documentation = "https://malept.github.io/guardhaus/"
repository = "https://github.com/malept/guardhaus"
readme = "README.md"
keywords = ["http", "authentication", "authorization", "digest"]
license = "MIT"
edition = "2024"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
digest = "0.10.7"
headers = "0.4.0"
http = "1.2.0"
httparse = "1.10.0"
language-tags = "0.3.2"
md-5 = "0.10.6"
percent-encoding = "2.1.0"
sha2 = "0.10.8"
thiserror = "2.0.11"
unicase = "2.0"

[dev-dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
axum-extra = "0.10.0"
getopts = "0.2"
rpassword = "7.3.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
pedantic = "allow"
